--- a/c/cs/css/csschopper.com.html
+++ b/c/cs/css/csschopper.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the csschopper.com privacy policy that was archived on 2016-11-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161127054148id_/http%3A//www.csschopper.com/privacy-policy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the csschopper.com privacy policy that was archived on 2017-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170601154657id_/http%3A//www.csschopper.com/privacy-policy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="utf-8">
@@ -24,7 +24,7 @@
 		<script src="http://chopps.sparxitsolutions.netdna-cdn.com/assets/js/selectivizr-min.js"></script>
 		<link rel="stylesheet" type="text/css" href="http://chopps.sparxitsolutions.netdna-cdn.com/assets/css/ie7.css">
 		<![endif]-->
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="http://chopps.sparxitsolutions.netdna-cdn.com/assets/js/modernizr-2.5.3-min.js" type="text/javascript"></script>
+<script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="http://chopps.sparxitsolutions.netdna-cdn.com/assets/js/modernizr-2.5.3-min.js" type="text/javascript"></script>
 <script type="text/javascript">
 	(function(i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r;
@@ -41,6 +41,21 @@
 	ga('create', 'UA-11389575-1', 'auto');
 	ga('send', 'pageview'); 
 </script>
+<!-- Facebook Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+document,'script','https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '916927531742806'); // Insert your pixel ID here.
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=916927531742806&ev=PageView&noscript=1"
+/></noscript>
+<!-- DO NOT MODIFY -->
+<!-- End Facebook Pixel Code -->
 <script type="text/javascript" async="" src="//cdn.mouseflow.com/projects/edcd9241-bc8f-48d0-835c-8ab35fabdede.js"></script></head>
 <body><div id="olark" style="display: none;"><olark><iframe frameborder="0" id="olark-loader"></iframe></olark></div>
   <script type="text/javascript" src="http://chopps.sparxitsolutions.netdna-cdn.com/assets/js/jquery-latest.js"></script>
@@ -59,6 +74,9 @@
 </strong>
 </div>
 </div> -->
+<div id="RockeitOffers-offer-strip-wrapper">
+
+</div>
 
 <style type="text/css" media="screen">
 	.header nav ul li ul.float-seventh {
@@ -1064,7 +1082,7 @@
                     </div>
     </div>
     <div class="rating-structure">
-        <div itemscope="" itemtype="http://data-vocabulary.org/Review-aggregate"> Rated <span itemprop="rating" itemscope="" itemtype="http://data-vocabulary.org/Rating"><span itemprop="average">4.9</span> out of <span itemprop="best">5.0</span> </span>for <span itemprop="itemreviewed">CSSChopper service</span> by <span class=""><span id="totalClient" itemprop="votes">9694</span> clients</span> on over<span class="highlighter"> <span itemprop="count">14000</span>+ projects.</span></div>
+        <div itemscope="" itemtype="http://data-vocabulary.org/Review-aggregate"> Rated <span itemprop="rating" itemscope="" itemtype="http://data-vocabulary.org/Rating"><span itemprop="average">4.9</span> out of <span itemprop="best">5.0</span> </span>for <span itemprop="itemreviewed">CSSChopper service</span> by <span class=""><span id="totalClient" itemprop="votes">9817</span> clients</span> on over<span class="highlighter"> <span itemprop="count">14000</span>+ projects.</span></div>
     </div>
 </div>
 <script type="text/javascript">
@@ -1139,9 +1157,9 @@
  <section class="customer-care">
 
     <div class="container">
-      <section class="customer-care-main"> <div class="blog-sec sixcol"><h3>From the blog</h3><dfn><a href="http://www.csschopper.com/blog/responsive-web-design-consider-6-points-while-designing-a-website" title="Responsive web design: Consider 6 points while designing a website" target="_blank">Responsive web design: Consider 6 points while designing a website</a></dfn>
-			<p>Amazing ways for all the businesses enterprises may it be small, medium or big has been opened worldwide due to rapid advancement in web technology. In such scenario, the... <a href="http://www.csschopper.com/blog/responsive-web-design-consider-6-points-while-designing-a-website" class="stat-links" target="_blank">&nbsp;read&nbsp;more</a></p><dfn><a href="http://www.csschopper.com/blog/csschopper-welcomes-you-to-enjoy-10-diwali-discount-on-all-projects" title="CSSChopper Welcomes You to Enjoy 10% Diwali Discount on All Projects" target="_blank">CSSChopper Welcomes You to Enjoy 10% Diwali Discount on All Projects</a></dfn>
-			<p>Celebrations are in the air. Diwali has knocked the doors and the people are preparing to make the most out of this illuminating eve. CSSChopper also walked on the same... <a href="http://www.csschopper.com/blog/csschopper-welcomes-you-to-enjoy-10-diwali-discount-on-all-projects" class="stat-links" target="_blank">&nbsp;read&nbsp;more</a></p></div><div class="customer-care-left sixcol last"><h3 id="gnrl17"><span>CLIENT ASKED QUESTIONS</span></h3><section class="content-faq-second active" id="gnrl171">     
+      <section class="customer-care-main"> <div class="blog-sec sixcol"><h3>From the blog</h3><dfn><a href="http://www.csschopper.com/blog/reasons-to-hire-reputed-web-development-company-for-business-site" title="Reasons To Hire Reputed Web Development Company For Business Site" target="_blank">Reasons To Hire Reputed Web Development Company For Business Site</a></dfn>
+			<p>Expanding a business online requires a useful business website that can help you get growth of the business across the world. However, it’s much needed to take care of... <a href="http://www.csschopper.com/blog/reasons-to-hire-reputed-web-development-company-for-business-site" class="stat-links" target="_blank">&nbsp;read&nbsp;more</a></p><dfn><a href="http://www.csschopper.com/blog/get-psd-to-bootstrap-4-with-outstanding-features" title="Get PSD to Bootstrap 4 with Outstanding Features" target="_blank">Get PSD to Bootstrap 4 with Outstanding Features</a></dfn>
+			<p>Bootstrap is the most popular JS, HTML and CSS framework that creates responsive plus mobile websites on the web to give an alluring feel to the users. Bootstrap 4 holds... <a href="http://www.csschopper.com/blog/get-psd-to-bootstrap-4-with-outstanding-features" class="stat-links" target="_blank">&nbsp;read&nbsp;more</a></p></div><div class="customer-care-left sixcol last"><h3 id="gnrl17"><span>CLIENT ASKED QUESTIONS</span></h3><section class="content-faq-second active" id="gnrl171">     
                                        <h4>How good are you in mobile application development?</h4>
                                         
                                            <aside class="answer-sec-second" id="gnrl171ans">
@@ -1338,7 +1356,7 @@ $(window).load(function(){
                             </figure> </a>
                     </li>
                     <li>
-                        <a href="http://www.csschopper.com/guarentee.shtml"> <dfn><span>Chopper Guarantees :</span> Money Back
+                        <a href="http://www.csschopper.com/guarentee.shtml"> <dfn><span>Chopper Guarantees :</span> *Money Back
                                 <mark>
                                     2 / 3
                                 </mark> </dfn>
@@ -1419,7 +1437,7 @@ $(window).load(function(){
                 <li>
                     <a href="javascript:;" id="show-panel3">Nasscom</a>
                 </li>
-                <li><a href="javascript:;" id="show-paneliso">ISO 9001:2008</a></li>
+                <li><a href="javascript:;" id="show-paneliso">ISO 9001:2015</a></li>
                 <li><a href="javascript:;" id="show-paneliso130">ISO 27001:2013</a></li>
                 <li><a href="javascript:;" id="show-panel2">Incorporated in India</a></li>
                 <li><a href="javascript:;" id="show-panel">Pan Card &amp; Co. Registration</a></li>
@@ -1441,7 +1459,7 @@ $(window).load(function(){
                     <!-- <img width="74" height="20" alt="facebook" src="http://chopps.sparxitsolutions.netdna-cdn.com/assets/images/facebook-like.jpg"> -->
                     <!--        <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fcsschopperfanpage&amp;send=false&amp;layout=button_count&amp;width=85&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:85px; height:21px;" allowTransparency="true"></iframe>-->
             </div>
-            <span class="copy">© 2016 <a rel="nofollow" href="http://www.sparxitsolutions.com/">Sparx IT Solutions Private Limited</a>. All Rights Reserved.</span>
+            <span class="copy">© 2017 <a rel="nofollow" href="http://www.sparxitsolutions.com/">Sparx IT Solutions Private Limited</a>. All Rights Reserved.</span>
         </section>
     </section>
 </footer>
@@ -1496,6 +1514,7 @@ $(window).load(function(){
 <div style="display: none;" id="lightbox-second"></div>
 <div style="display: none;" id="lightbox-third"></div>
 <div style="display: none;" id="lightbox-iso"></div>
+<div style="display: none;" id="offer_popup"></div>
 
 
 <!-- offer-popup-box -->
@@ -2336,7 +2355,71 @@ $(window).load(function(){
                         </div>
                 </div>
 </div> -->
+<!--<script type="text/javascript">
+    var xmlHttp = null;
+    var scriptProcess = true;
+    if (scriptProcess) {
+        try
+        {
+            xmlHttp = new XMLHttpRequest;
+        }
+        catch (e)
+        {
+            try
+            {
+                xmlHttp = new ActiveXObject("Msxml2.XMLHTTP");
+            }
+            catch (e)
+            {
+                xmlHttp = new ActiveXObject("Microsoft.XMLHTTP");
+            }
+        }
+        xmlHttp.onreadystatechange = function ()
+        {
+            if (xmlHttp.readyState == 4)
+            {
+                var div = document.getElementById('offer_popup');
+                div.innerHTML = xmlHttp.responseText;
+                var script = document.createElement('script');
+                script.src = "http://mychopps.csschopper.com/companies/sparx/csschopper/offers/assets/js/RockeitOffers-js.js?t=1311769204";
+                script.onload = function () {
+                };
+                document.head.appendChild(script); //or something of the likes
+            }
+        }
+    }
+    xmlHttp.open("GET", "http://mychopps.csschopper.com/companies/sparx/csschopper/offers/offer.php?t=1496332017", true);
+    xmlHttp.send(null);
 
+
+
+    try
+    {
+        xmlHttp1 = new XMLHttpRequest;
+    }
+    catch (e)
+    {
+        try
+        {
+            xmlHttp1 = new ActiveXObject("Msxml2.XMLHTTP");
+        }
+        catch (e)
+        {
+            xmlHttp1 = new ActiveXObject("Microsoft.XMLHTTP");
+        }
+    }
+    xmlHttp1.onreadystatechange = function ()
+    {
+        if (xmlHttp1.readyState == 4)
+        {
+            var div = document.getElementById('RockeitOffers-offer-strip-wrapper');
+            div.innerHTML = xmlHttp1.responseText;
+
+        }
+    }
+    xmlHttp1.open("GET", "http://mychopps.csschopper.com/companies/sparx/csschopper/header-strip/offer-strip.php?tt=1496332017", true);
+    xmlHttp1.send(null);
+</script>-->
 <script src="http://chopps.sparxitsolutions.netdna-cdn.com/assets/js/jquery.rateyo.min.js"></script>
 <script type="text/javascript">
 
