--- a/a/an/ani/animeram.eu.html
+++ b/a/an/ani/animeram.eu.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the animeram.eu privacy policy that was archived on 2016-03-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160324104154id_/http%3A//www.animeram.co/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the animeram.eu privacy policy that was archived on 2017-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170601223000id_/http%3A//ww1.animeram.cc/privacy-policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html><head><title>Privacy Policy</title><meta charset="utf-8"><meta name="description" content="Watch Anime Episodes Online Subbed and Dubbed Free Streaming Movies in HD. All Videos HD and work on iPod, iPhone, Android, Windows and BlackBerry."><meta name="author" content="AnimeRam"><meta property="og:site_name" content="AnimeRam"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="google-site-verification" content="Rz5WFbTTDIFXPYeSxCW1JiGFhVOgkPfdeYO213_-GWA"><link rel="stylesheet" type="text/css" href="//bowercdn.net/c/html5-boilerplate-4.3.0/css/normalize.css"><link rel="stylesheet" type="text/css" href="//bowercdn.net/c/html5-boilerplate-4.3.0/css/main.css"><link rel="stylesheet" href="//bowercdn.net/c/bootstrap-3.2.0/dist/css/bootstrap.min.css"><link rel="stylesheet" href="/css/style.css"><link rel="stylesheet" href="/css/nprogress.css"><link rel="stylesheet" href="/css/index2.css?v3"><link rel="icon" href="//i.imgur.com/etAEVvP.png" sizes="16x16" type="image/png"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="shortcut icon" sizes="196x196" href="//i.imgur.com/etAEVvP.png"><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="//c1.popads.net/pop.js"></script><script type="text/javascript" async="" src="//c2.popads.net/pop.js"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script src="//bowercdn.net/c/jquery-1.11.1/dist/jquery.min.js"></script><script src="/js/nprogress.js"></script><script async="" src="//www.burstcpm.com/serve/www/delivery/asyncjs.php"></script></head><body><div role="banner" class="navbar navbar-inverse bs-docs-nav"><div class="container"><div class="navbar-header"><button type="button" data-toggle="collapse" data-target=".bs-navbar-collapse" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><h1><a href="/" class="navbar-brand"><img id="logo" src="/images/logo.png" alt="Watch Anime Online"></a></h1></div><div role="navigation" class="collapse navbar-collapse bs-navbar-collapse"><ul class="nav navbar-nav"><li><a href="/release-schedule" class="usertab">Schedule</a></li><li class="search"><form method="get" action="/search"><input type="text" name="search" placeholder="Search Anime..." id="jsid-search-input" tabindex="1" class="ui-autocomplete-input"><span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span></form></li><li><a href="/series" class="dropdown-toggle">Browse</a></li><li><a href="/popular-series" class="dropdown-toggle">Popular</a></li><li><a href="/random" class="blue">Random</a></li><li class="aff"><a href="http://www.animebam.net/"><img src="//i.imgur.com/iHHWzxf.png" alt="Anime Episodes" border="0"></a><a href="http://www.animeram.co/"><img src="//i.imgur.com/D9cXxBH.png" alt="Watch Anime" border="0"></a><a href="http://www.narutospot.net/"><img src="//i.imgur.com/XaB2vSS.png" alt="Naruto Shippuden" border="0"></a></li></ul></div><a name="top"></a></div><!--main content--></div><div style="margin-top: 15px" class="container"><div class="row"><div class="col-md-10"><div class="cblock"><div id="recentTabs" role="tablist" class="home-tabs recent-anime"><h2><a href="#recentlyReleased" role="tab" data-toggle="tab" class="active">Privacy Policy</a></h2></div><div class="curl"><p></p><h1>Privacy Policy</h1>
+<!DOCTYPE html><html><head><title>Privacy Policy</title><meta charset="utf-8"><meta name="description" content="Watch Anime Episodes Online Subbed and Dubbed Free Streaming Movies in HD. All Videos HD and work on iPod, iPhone, Android, Windows and BlackBerry."><meta name="author" content="AnimeRam"><meta property="og:site_name" content="AnimeRam"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="google-site-verification" content="Rz5WFbTTDIFXPYeSxCW1JiGFhVOgkPfdeYO213_-GWA"><link rel="stylesheet" type="text/css" href="//bowercdn.net/c/html5-boilerplate-4.3.0/css/normalize.css"><link rel="stylesheet" type="text/css" href="//bowercdn.net/c/html5-boilerplate-4.3.0/css/main.css"><link rel="stylesheet" href="//bowercdn.net/c/bootstrap-3.2.0/dist/css/bootstrap.min.css"><link rel="stylesheet" href="/css/style.css"><link rel="stylesheet" href="/css/nprogress.css"><link rel="stylesheet" href="/css/index2.css?v7"><link rel="icon" href="//i.imgur.com/etAEVvP.png" sizes="16x16" type="image/png"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="shortcut icon" sizes="196x196" href="//i.imgur.com/etAEVvP.png"><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script src="//bowercdn.net/c/jquery-1.11.1/dist/jquery.min.js"></script><script src="/js/nprogress.js"></script><script async="" src="//www.burstcpm.com/serve/www/delivery/asyncjs.php"></script></head><body><div class="networksites"><div class="container"><center><a href="https://www.animeram.cc/" class="netactive"><img src="//i.imgur.com/DM4C24U.png" alt="Watch Anime">Watch Anime</a><a href="http://www.naruspot.tv/"><img src="//i.imgur.com/lGzanUp.png" alt="Naruto Shippuden">Naruto Shippuden</a><a href="https://www1.dbzsuper.tv/"><img src="//i.imgur.com/n6YF226.png" alt="Dragon Ball Super">Dragon Ball Super</a></center></div></div><div role="banner" class="navbar navbar-inverse bs-docs-nav"><div class="container"><div class="navbar-header"><button type="button" data-toggle="collapse" data-target=".bs-navbar-collapse" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><h1><a href="/" class="navbar-brand"><img id="logo" src="/images/logo.png" alt="Watch Anime Online"></a></h1></div><div role="navigation" class="collapse navbar-collapse bs-navbar-collapse"><ul class="nav navbar-nav"><li><a href="/release-schedule" class="usertab">Schedule</a></li><li class="search"><form method="get" action="/search"><input type="text" name="search" placeholder="Search Anime..." id="jsid-search-input" tabindex="1" class="ui-autocomplete-input"><span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span></form></li><li><a href="/series" class="dropdown-toggle">Browse</a></li><li><a href="/popular-series" class="dropdown-toggle">Popular</a></li><li><a href="/random" class="blue">Random</a></li></ul></div><a name="top"></a></div><!--main content--></div><div style="margin-top: 15px" class="container"><div class="row"><div class="col-md-10"><div class="cblock"><div id="recentTabs" role="tablist" class="home-tabs recent-anime"><h2><a href="#recentlyReleased" role="tab" data-toggle="tab" class="active">Privacy Policy</a></h2></div><div class="curl"><p></p><h1>Privacy Policy</h1>
 
 <p>There are many different ways you can use our services - to search for and share information, to communicate with other people or to create new content. When you share information with us, for example by creating a ANIMEGG Account, we can make those services even better - to show you more relevant search results and ads, to help you connect with people or to make sharing with others quicker and easier. As you use our services, we want you to be clear how we're using information and the ways in which you can protect your privacy.</p>
 
@@ -135,27 +135,40 @@
 <h2>Changes</h2>
 
 <p>Our Privacy Policy may change from time to time. We will not reduce your rights under this Privacy Policy without your explicit consent. We will post any privacy policy changes on this page and, if the changes are significant, we will provide a more prominent notice (including, for certain services, email notification of privacy policy changes). We will also keep prior versions of this Privacy Policy in an archive for your review.</p><p></p></div></div></div><div class="col-md-2"><div class="ads"><div class="rightTopAd"></div><script>if($(window).width() > 990){
-  $('.rightTopAd').html('<ins data-revive-zoneid="4" data-revive-id="e2c33b5f25438c851a36bf4cb19756de"></ins>');
+  $('.rightTopAd').html('<ins data-revive-zoneid="7" data-revive-id="e2c33b5f25438c851a36bf4cb19756de"></ins><br /><ins data-revive-zoneid="4" data-revive-id="e2c33b5f25438c851a36bf4cb19756de"></ins>');
 }
 else{
   $('.rightTopAd').html('');
-}</script><ul class="admininterface"><li><a href="http://www.animebam.net" target="_blank">Watch Anime Online</a></li><li><a href="http://www.animejolt.net" target="_blank">Dubbed Anime</a></li><li><a href="http://www.naruspot.me" target="_blank">Naruto Shippuden</a></li><li><a href="http://www.arcadespot.com/" target="_blank">Free Online Games</a></li><li><a href="http://www.burstanime.com/" target="_blank">Anime Episodes</a></li></ul></div></div><div class="clearfix"></div></div></div><!--footer--><div class="container"><hr><ul class="footer-links pull-right"><li><a href="/terms-of-service" class="btn btn-default btn-sm"> Terms of Service</a></li><li><a href="/privacy-policy" class="btn btn-default btn-sm"> Privacy Policy</a></li><li><a href="/complaint" class="btn btn-default btn-sm"> DMCA Complaint</a></li><li><a href="/contact" class="btn btn-default btn-sm"> Contact Us</a></li><li><a href="/rss" target="_blank" class="btn btn-sm btn-default">RSS Feed</a></li><li><a href="javascript:void(0)" style="display: none" class="btn btn-sm btn-default"><img src="//whos.amung.us/swidget/xr9av1qkz70n.png" width="80" height="15" border="0"><img src="//whos.amung.us/swidget/k2t1hmtl2ml7.png" width="80" height="15" border="0"></a></li></ul><ul class="footer-links"><li><a class="btn btn-sm btn-default disabled">© AnimeRam 2016</a></li></ul></div><!--load scripts--><!-- nprogress--><script>$('body').show(); $('.version').text(NProgress.version); NProgress.start(); setTimeout(function(){
+}</script><ul class="admininterface"><li><a href="https://www.dbzsuper.tv" target="_blank">Dragon Ball Super</a></li><li><a href="http://www.animejolt.net" target="_blank">Dubbed Anime</a></li><li><a href="http://www.naruspot.tv" target="_blank">Naruto Shippuden</a></li><li><a href="http://www1.narutoget.to" target="_blank">Narutoget</a></li><li><a href="http://www.arcadespot.com/" target="_blank">Free Online Games</a></li></ul></div></div><div class="clearfix"></div></div></div><!--footer--><div class="container"><hr><ul class="footer-links pull-right"><li><a href="/terms-of-service" class="btn btn-default btn-sm"> Terms of Service</a></li><li><a href="/privacy-policy" class="btn btn-default btn-sm"> Privacy Policy</a></li><li><a href="/complaint" class="btn btn-default btn-sm"> DMCA Complaint</a></li><li><a href="/contact" class="btn btn-default btn-sm"> Contact Us</a></li><li><a href="/rss" target="_blank" class="btn btn-sm btn-default">RSS Feed</a></li><li><a href="javascript:void(0)" style="display: none" class="btn btn-sm btn-default"><img src="//whos.amung.us/swidget/xr9av1qkz70n.png" width="80" height="15" border="0"><img src="//whos.amung.us/swidget/k2t1hmtl2ml7.png" width="80" height="15" border="0"></a></li></ul><ul class="footer-links"><li><a class="btn btn-sm btn-default disabled">© AnimeRam 2017</a></li></ul></div><!--load scripts--><!-- nprogress--><script>$('body').show(); $('.version').text(NProgress.version); NProgress.start(); setTimeout(function(){
   NProgress.done();
   $('.fade').removeClass('out');
-},1000); $("#b-0").click(function(){ NProgress.start(); }); $("#b-40").click(function(){ NProgress.set(0.4); }); $("#b-inc").click(function(){ NProgress.inc(); }); $("#b-100").click(function(){ NProgress.done(); });</script><!-- Chatango Chat Box--><script id="cid0020000065135929203" src="//st.chatango.com/js/gz/emb.js" async="" style="width: 275px; height: 315px;">{"handle":"wanimechat","arch":"js","styles":{"a":"000","b":100,"c":"FFFFFF","d":"000","h":"FFFFFF","k":"000000","l":"000000","m":"FFFFFF","n":"FFFFFF","o":"100","q":"000","r":000000,"t":0,"showx":"0","pos":"br","cv":1,"cvbg":"000","usricon":0.99,"surl":0,"cnrs":"0.35","usricon":"1"}}</script><script id="sid0020000065135929203_">(function() {function async_load(){
-s.id="cid0020000065135929203";
-s.src=(window.location.href.indexOf('file:///') > -1 ? 'http:' : '') + '//st.chatango.com/js/gz/emb.js';
-s.style.cssText="width:275px;height:315px;";
-s.async=true;
-s.text='{"handle":"wanimechat","arch":"js","styles":{"a":"000","b":100,"c":"FFFFFF","d":"000","h":"FFFFFF","k":"000000","l":"000000","m":"FFFFFF","n":"FFFFFF","o":"100","q":"000","r":000000,"t":0,"showx":"0","pos":"br","cv":1,"cvbg":"000","usricon":0.99,"surl":0,"cnrs":"0.35","usricon":"1"}}';
-var ss = document.getElementsByTagName('script');
-for (var i=0, l=ss.length; i < l; i++){
-if (ss[i].id=='sid0020000065135929203'){
-ss[i].id +='_';ss[i].parentNode.insertBefore(s, ss[i]);break;}}}
-var s=document.createElement('script');
-if (s.async==undefined){
-if (window.addEventListener) {addEventListener('load',async_load,false);
-}else if (window.attachEvent) {attachEvent('onload',async_load);}}else {async_load();}})();</script><!--end chatango ChatBox--><!--statcounter--><script>var sc_project = 8594460;
+},1000); $("#b-0").click(function(){ NProgress.start(); }); $("#b-40").click(function(){ NProgress.set(0.4); }); $("#b-inc").click(function(){ NProgress.inc(); }); $("#b-100").click(function(){ NProgress.done(); });</script><!-- Composite Start--><div id="M23129ScriptRootC102376"><iframe style="display: none;"></iframe></div><script>(function(){
+  var D = new Date(),d = document,b = 'body',ce = 'createElement',ac = 'appendChild',st = 'style',ds = 'display',n = 'none',gi = 'getElementById';
+  var i = d[ce]('iframe');
+  i[st][ds] = n;
+  d[gi]("M23129ScriptRootC102376")[ac](i);
+  try {
+    var iw = i.contentWindow.document;
+    iw.open();
+    iw.writeln("<ht" + "ml><bo" + "dy></bo" + "dy></ht" + "ml>");
+    iw.close();
+    var c = iw[b];
+  } catch(e){
+    var iw = d;
+    var c = d[gi]("M23129ScriptRootC102376");
+  }
+  var dv = iw[ce]('div');
+  dv.id = "MG_ID";
+  dv[st][ds] = n;
+  dv.innerHTML = 102376;
+  c[ac](dv);
+  var s = iw[ce]('script');
+  s.async = 'async';
+  s.defer = 'defer';
+  s.charset = 'utf-8';
+  s.src = "//jsc.mgid.com/a/n/animeram.com.102376.js?t=" + D.getYear() + D.getMonth() + D.getDate() + D.getHours();
+  c[ac](s);
+})();</script><!-- Composite End--><!--statcounter--><script>var sc_project = 8594460;
 var sc_invisible = 1;
 var sc_security = "c4bfd89d";
 var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
@@ -170,25 +183,7 @@ document.write("<sc" + "ript type='text/javascript' src='" + scJsHost + "statcou
 })();
 _qevents.push({
   qacct:"p-c3kw22KMeoLTc"
-});</script><noscript><div style="display:none;"><img src="//pixel.quantserve.com/pixel/p-c3kw22KMeoLTc.gif" border="0" height="1" width="1" alt="Quantcast"></div></noscript><!-- End Quantcast tag--><!-- PopAds.net Popunder Code for www.animeram.me--><script type="text/javascript">var _pop = _pop || [];
-_pop.push(['siteId', 1168059]);
-_pop.push(['minBid', 0.000000]);
-_pop.push(['popundersPerIP', 2]);
-_pop.push(['delayBetween', 1200]);
-_pop.push(['default', false]);
-_pop.push(['defaultPerDay', 0]);
-_pop.push(['topmostLayer', false]);
-(function() {
-  var pa = document.createElement('script'); pa.type = 'text/javascript'; pa.async = true;
-  var s = document.getElementsByTagName('script')[0];
-  pa.src = '//c1.popads.net/pop.js';
-  pa.onerror = function() {
-    var sa = document.createElement('script'); sa.type = 'text/javascript'; sa.async = true;
-    sa.src = '//c2.popads.net/pop.js';
-    s.parentNode.insertBefore(sa, s);
-  };
-  s.parentNode.insertBefore(pa, s);
-})();</script><!-- PopAds.net Popunder Code End--><!--google analytics--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+});</script><noscript><div style="display:none;"><img src="//pixel.quantserve.com/pixel/p-c3kw22KMeoLTc.gif" border="0" height="1" width="1" alt="Quantcast"></div></noscript><!-- End Quantcast tag--><!--google analytics--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
